Mon, 20 Nov 2006 11:58:37 +0100 <thp@perli.net>
        * src/gpodder/libipodsync.py: Applied patch from Nick (nikosapi 
          gmail com) to add file size to iTunesDB. This should fix the 
          constant disk spinning on 5G iPods. Thanks :)

Sat, 18 Nov 2006 11:41:16 +0100 <thp@perli.net>
        * src/gpodder/libipodsync.py: Applied modified patch from (nikosapi
          gmail com) to add "blue bullet" and "remember playback position" 
	  for fifth generation iPods when syncing to Podcasts playlist

Fri, 17 Nov 2006 21:42:18 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Clear list of downloaded items after
          deleting the last channel (thanks to Alain Tauch for reporting)

Fri, 17 Nov 2006 11:10:42 +0100 <thp@perli.net>
        * src/gpodder/liblogger.py: Added new logging facility
        * src/gpodder/libgpodder.py: Removed isDebugging() and debug flag
        * src/gpodder/*: Use new liblogger instead of isDebugging() in
          libwget.py, liblocdbreader.py, libplayers.py, libpodcasts.py,
          libgpodder.py, libipodsync.py, gpodder.py and liblocaldb.py
        * TODO: Updated TODO list
        * bin/gpodder: bumped release date again

Thu, 16 Nov 2006 23:44:43 +0100 <thp@perli.net>
        * src/gpodder/liblocaldb.py: Applied modified version of patch 
	  from Alain Tauch to fix a bug in liblocaldb.py; re-factored the 
	  whole module to get rid of caching cruft and old code; this 
	  should also fix the long-standing "new downloaded channel doesn't
	  appear and requires a restart of gPodder" problem :)
        * bin/gpodder: bumped version + release date

Wed, 15 Nov 2006 12:12:13 +0100 <thp@perli.net>
        * setup.py: Added "pt" to list of languages to install
        * data/gpodder.desktop: Added Portuguese description
        * data/po/pt.po: Added Portuguese translation by Joel Calado
        * Makefile: Improved "make cl" target (also process added files)

Tue, 14 Nov 2006 19:44:03 +0100 <thp@perli.net>